--- a/source/less/blocks/form-contacts.less
+++ b/source/less/blocks/form-contacts.less
@@ -22,6 +22,10 @@
     padding-top: 75px;
     padding-bottom: 65px;
   }
+  @media (min-width: @desktop-width) {
+    padding: 0px;
+    width: 552px;
+  }
 }
 .form-contacts {
   position:relative;
@@ -30,13 +34,16 @@
   position:absolute;
   content: "";
   z-index: -1;
-  width: 1440px;
+  width: 100%;
   height: 3px;
   background-color: @button-green;
   top: 40px;
-  left: -500px;
+
   @media (min-width: @tablet-width) {
     top: 97px;
+  }
+  @media (min-width: @desktop-width) {
+    top: 19px;
   }
 }
 .form-contacts__wrapper {
@@ -44,8 +51,15 @@
   .ma;
   display: flex;
   flex-wrap: wrap;
+
   @media (min-width: @tablet-width) {
     width: 640px;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 100%;
+    padding-top: 63px;
+    justify-content: space-between;
   }
 }
 .form-contacts__item{
@@ -59,6 +73,11 @@
     width: 638px;
     padding-left: 10px;
     height:72px;
+  }
+
+  @media (min-width: @desktop-width) {
+    width: 572px;
+    .mp;
   }
 }
 .form-contacts__item input {
@@ -82,11 +101,6 @@
   }
 }
 .form-contacts__item--email input{
-  @media (min-width: @tablet-width) {
-    padding-left: 20px;
-  }
-}
-.form-contacts__item--email input{
   background-image: url("../img/icon-mail.svg");
   background-repeat: no-repeat;
   background-position: 97% 55%;
@@ -94,7 +108,11 @@
   @media (min-width: @tablet-width) {
     padding-left: 20px;
   }
+  @media (min-width: @desktop-width) {
+    background-position: 96% 53%;
+  }
 }
+
 .form-contacts__item--phone input {
   background-image: url("../img/icon-phone.svg");
   background-repeat: no-repeat;
@@ -102,5 +120,10 @@
 
   @media (min-width: @tablet-width) {
     padding-left: 20px;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding-left: 15px;
+    background-position: 96% 53%;
   }
 }
