--- a/source/less/blocks/form-targets.less
+++ b/source/less/blocks/form-targets.less
@@ -19,7 +19,12 @@
 
   @media (min-width: @desktop-width) {
     width: 570px;
-    margin: 0;
+    .mp;
+    height: 194px;
+    margin-top: 34px;
+    border: 1px solid #cdcdcd;
+    padding-top: 16px;
+    padding-bottom: 14px;
   }
 }
 
@@ -30,7 +35,6 @@
 .form-targets__item {
   display: block;
   width: 280px;
-  min-height:43px;
   box-sizing: border-box;
   line-height:42px;
   padding-left: 45px;
@@ -40,6 +44,9 @@
     width: 668px;
     line-height:52px;
     padding-left: 85px;
+  }
+  @media (min-width: @desktop-width) {
+    line-height: 54px;
   }
 }
 
