--- a/source/less/blocks/page-form.less
+++ b/source/less/blocks/page-form.less
@@ -11,8 +11,8 @@
   }
 
   @media (min-width: @desktop-width) {
-    width: 1220px;
-    padding: 0 40px;
+    width: 1440px;
+    padding: 0 110px;
     margin: 0 auto;
   }
 }
@@ -31,6 +31,10 @@
     font-size: 60px;
     padding-top: 31px;
     padding-left: 0;
+  }
+  @media (min-width: @desktop-width) {
+    .mp;
+    padding-top: 17px;
   }
 }
 
@@ -51,5 +55,9 @@
     width: 330px;
     padding-top: 55px;
     padding-left: 40px;
+  }
+
+  @media (min-width: @tablet-width) {
+    padding-left: 0;
   }
 }
