--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -8,24 +8,59 @@
 .catalog__item {
   display: flex;
   flex-wrap: wrap;
+  width: 320px;
+  box-sizing:border-box;
+  padding: 0 20px;
+  padding-bottom: 25px;
+  border-bottom: 1px solid #ededed;
 
   @media (min-width: @tablet-width) {
     align-items: center;
+    position: relative;
     background-color: @bg-grey;
     box-sizing: border-box;
     flex-direction: column;
-    margin-bottom: 20px;
     margin-right: 60px;
-    min-height: 530px;
+    height: 431px;
     padding: 0 38px;
     width: 324px;
+    margin-top: 85px;
+    margin-bottom: 55px;
   }
 
   @media (min-width: @desktop-width) {
-    margin-bottom: 48px;
+    margin-bottom: 56px;
     margin-right: 80px;
-    min-height: 530px;
+    min-height: 431px;
     width: 245px;
+  }
+}
+
+.catalog__link--small {
+  @media (min-width: @tablet-width) {
+    position:absolute;
+    top: -46px;
+    left: 84px;
+  }
+
+  @media (min-width: @desktop-width) {
+    position:absolute;
+    top: -46px;
+    left: 45px;
+  }
+}
+
+.catalog__link--big {
+  @media (min-width: @tablet-width) {
+    position:absolute;
+    top: -82px;
+    left: 68px;
+  }
+
+  @media (min-width: @desktop-width) {
+    position:absolute;
+    top: -82px;
+    left: 30px;
   }
 }
 
@@ -70,6 +105,25 @@
   line-height: 40px;
   text-align: center;
   width: 100%;
+  margin-top: -5px;
+
+  @media (min-width: @tablet-width) {
+    margin-top: 35px;
+  }
+
+  @media (min-width: @desktop-width) {
+    margin-top: 33px;
+  }
+}
+
+.catalog__button--more {
+  margin-top: 20px;
+  color: black;
+  background-color: #f2f2f2;
+
+  @media (min-width: @tablet-width) {
+    margin-top: 85px;
+  }
 }
 
 .catalog__caption {
@@ -77,21 +131,75 @@
   .regular;
   color: black;
   .uppercase;
-  font-size: 16px;
+  font-size: 14px;
+  width:78px;
   line-height: 20px;
+  padding-top: 20px;
+  padding-bottom: 14px;
 
   @media (min-width: @tablet-width) {
-    font-size: 20px;
+    font-size: 17px;
+    width:140px;
+    padding-left: 2px;
+    padding-top: 164px;
+    text-align: center;
+    padding-bottom: 19px;
+  }
+
+  @media (min-width: @desktop-width) {
+    padding-top: 162px;
+    padding-left: 0px;
   }
 }
 
+.catalog__caption--plus{
+  width:280px;
+  text-align: center;
+  font-size: 16px;
+
+  @media (min-width: @tablet-width) {
+    font-size: 20px;
+    width: 134px;
+  }
+}
 .catalog__small {
   .arial;
   color: @text-gray;
   font-size: 12px;
   line-height: 16px;
+  width: 280px;
+  text-align: center;
+  padding-top: 10px;
 
   @media (min-width: @tablet-width) {
+    padding-top: 27px;
     font-size: 16px;
+    line-height: 18px;
+    width: 168px;
+  }
+}
+
+.catalog__plus-button {
+  display: block;
+  background-image: url("../img/plus.png");
+  background-size: cover;
+  width: 30px;
+  height: 30px;
+  margin: 0 auto;
+  margin-top: 24px;
+  margin-bottom: 23px;
+
+  @media (min-width: @tablet-width) {
+    width: 60px;
+    height: 60px;
+    margin-top: 55px;
+    margin-bottom: 49px;
+  }
+}
+.catalog__item--more {
+  @media (min-width: @tablet-width) {
+    box-sizing: border-box;
+    background-color: white;
+    border: 1px solid #e6e6e6;
   }
 }
