--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -40,13 +40,13 @@
   @media (min-width: @tablet-width) {
     position:absolute;
     top: -46px;
-    left: 84px;
+    left: 0;
   }
 
   @media (min-width: @desktop-width) {
     position:absolute;
     top: -46px;
-    left: 45px;
+    left: 0px;
   }
 }
 
@@ -54,13 +54,13 @@
   @media (min-width: @tablet-width) {
     position:absolute;
     top: -82px;
-    left: 68px;
+    left: 0px;
   }
 
   @media (min-width: @desktop-width) {
     position:absolute;
     top: -82px;
-    left: 30px;
+    left: 0px;
   }
 }
 
