--- a/source/less/blocks/product-description.less
+++ b/source/less/blocks/product-description.less
@@ -1,6 +1,7 @@
 .product-description {
   padding: 0 20px;
   padding-bottom: 28px;
+
   @media (min-width: @tablet-width) {
     padding: 0 30px;
   }
@@ -93,6 +94,11 @@
     position: absolute;
     content: "";
     background-image: url("../img/advantage-leaf@1x.png");
+
+    @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
+      background-image: url("../img/advantage-leaf@2x.png");
+      background-size: 60%;
+    }
     background-color: @button-green;
     background-position: center;
     width: 60px;
@@ -100,22 +106,17 @@
     background-repeat: no-repeat;
     left: 0;
     top:7px;
-  }
 
-  @media (min-width: @tablet-width) {
-    &::before {
-      position: absolute;
-      content: "";
-      background-image: url("../img/advantage-leaf@1x.png");
-      background-color: @button-green;
-      background-position: center;
+    @media (min-width: @tablet-width) {
       width: 80px;
       height: 80px;
       background-repeat: no-repeat;
       left: 0;
       top: 0;
     }
+  }
 
+  @media (min-width: @tablet-width) {
     &::after {
       z-index: -1;
       position: absolute;
@@ -135,6 +136,11 @@
     position: absolute;
     content: "";
     background-image: url("../img/advantage-powder@1x.png");
+
+    @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
+      background-image: url("../img/advantage-powder@2x.png");
+      background-size: 60%;
+    }
     background-color: @button-green;
     background-position: center;
     width: 60px;
@@ -142,22 +148,16 @@
     background-repeat: no-repeat;
     left: 0;
     top:6px;
-  }
 
-  @media (min-width: @tablet-width) {
-    &::before {
-      position: absolute;
-      content: "";
-      background-image: url("../img/advantage-powder@1x.png");
-      background-color: @button-green;
-      background-position: center;
+    @media (min-width: @tablet-width) {
       width: 80px;
       height: 80px;
-      background-repeat: no-repeat;
       left: 0;
       top: 0;
     }
+  }
 
+  @media (min-width: @tablet-width) {
     &::after {
       z-index: -1;
       position: absolute;
@@ -177,6 +177,11 @@
     position: absolute;
     content: "";
     background-image: url("../img/advantage-dining@1x.png");
+
+    @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
+      background-image: url("../img/advantage-dining@2x.png");
+      background-size: 60%;
+    }
     background-color: @button-green;
     background-position: center;
     width: 60px;
@@ -184,22 +189,16 @@
     background-repeat: no-repeat;
     left: 0;
     top:6px;
-  }
 
-  @media (min-width: @tablet-width) {
-    &::before {
-      position: absolute;
-      content: "";
-      background-image: url("../img/advantage-dining@1x.png");
-      background-color: @button-green;
-      background-position: center;
+    @media (min-width: @tablet-width) {
       width: 80px;
       height: 80px;
-      background-repeat: no-repeat;
       left: 0;
       top: 0;
     }
+  }
 
+  @media (min-width: @tablet-width) {
     &::after {
       z-index: -1;
       position: absolute;
@@ -233,6 +232,11 @@
       position: absolute;
       content: "";
       background-image: url("../img/advantage-clock@1x.png");
+
+      @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
+        background-image: url("../img/advantage-clock@2x.png");
+        background-size: 60%;
+      }
       background-color: @button-green;
       background-position: center;
       width: 80px;
