--- a/source/less/blocks/additional-goods.less
+++ b/source/less/blocks/additional-goods.less
@@ -186,26 +186,40 @@
 
 .additional-goods__promo {
   width: 280px;
-  height: 290px;
+  min-height: 290px;
   background-image: url("../img/gift-photo-mobile@1x.jpg");
+
+  @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
+    background-image: url("../img/gift-photo-mobile@2x.jpg");
+    background-size: 280px 290px;
+  }
   background-size: cover;
   margin-bottom: 34px;
 
   @media (min-width: @tablet-width) {
-    background-image: url("../img/gift-photo-tablet.jpg");
+    background-image: url("../img/gift-photo-tablet@1x.jpg");
+
+    @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
+      background-image: url("../img/gift-photo-tablet@2x.jpg");
+      background-size: 708px 199px;
+    }
     .mp;
     width: 708px;
     min-height: 199px;
-    margin-top: 31px;
+    margin-top: 70px;
     margin-bottom: 75px;
   }
 
   @media (min-width: @desktop-width) {
     .mp;
-    background-image: url("../img/gift-photo-desktop.jpg");
+    background-image: url("../img/gift-photo-desktop@1x.jpg");
+
+    @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
+      background-image: url("../img/gift-photo-desktop@2x.jpg");
+      background-size: 245px 289px;
+    }
     width: 245px;
     min-height: 289px;
-
   }
 }
 
