--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -26,11 +26,15 @@
   align-items: center;
 
   @media (min-width: @tablet-width) {
-    min-height: 110px;
+    min-height: 105px;
+    padding: 0;
+    margin-left: -12px;
+    padding-top: 5px;
   }
 
   @media (min-width: @desktop-width) {
     min-height: 172px;
+    margin: 0;
   }
 }
 
@@ -40,7 +44,6 @@
   @media (min-width: @tablet-width) {
     display: flex;
     align-items: center;
-
   }
 }
 
@@ -64,9 +67,21 @@
   margin-left: -10px;
   width: 101px;
   height: 18px;
+
+  @media (min-width: @tablet-width) {
+    display: none;
+  }
 }
 .page-header__icon {
-  width: 33px;
-  height: 38px;
   margin-top: -5px;
+
+  @media (min-width: @tablet-width) {
+    width: 173px;
+    height: 58px;
+  }
+
+  @media (min-width: @tablet-width) {
+    width: 202px;
+    height: 60px;
+  }
 }
