--- a/source/less/blocks/promo.less
+++ b/source/less/blocks/promo.less
@@ -21,11 +21,22 @@
   background-repeat: no-repeat;
   background-position: center;
   margin-bottom: 197px;
+
   position: relative;
+
+  @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
+    background-image: url("../img/index-background-mobile@2x.jpg");
+    background-size: 320px 305px;
+  }
 
   @media (min-width: @tablet-width) {
     .ma;
-    background-image: url("../img/index-can-tablet.jpg");
+    background-image: url("../img/index-can-tablet@1x.jpg");
+
+    @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
+      background-image: url("../img/index-can-tablet@2x.jpg");
+      background-size: 708px 609px;
+    }
     background-position: 28px 230px;
     width: 768px;
     box-sizing: border-box;
@@ -36,9 +47,14 @@
 
   @media (min-width: @desktop-width) {
     width: 1440px;
-    background-image: url("../img/index-desktop.jpg");
+    background-image: url("../img/index-desktop@1x.jpg");
     background-position: 50% 0;
     min-height: 696px;
+
+    @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
+      background-image: url("../img/index-desktop@2x.jpg");
+      background-size: 1440px 696px;
+    }
   }
 }
 
@@ -47,7 +63,13 @@
   content: "";
   width: 280px;
   height: 271px;
-  background-image: url("../img/index-can-mobile.png");
+  background-image: url("../img/index-can-mobile@1x.png");
+
+  @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
+    background-image: url("../img/index-can-mobile@2x.png");
+    background-size: 280px 270px;
+  }
+
   margin-top: 168px;
   margin-left: 20px;
 
@@ -58,7 +80,12 @@
   }
 
   @media (min-width: @desktop-width) {
-    background-image: url("../img/index-can-desktop.png");
+    background-image: url("../img/index-can-desktop@1x.png");
+
+    @media (min-resolution: @retina-dpi), (min-resolution: @retina-dppx) {
+      background-image: url("../img/index-can-desktop@2x.png");
+      background-size: 552px 499px;
+    }
     width: 552px;
     height: 499px;
     margin-top: 142px;
