--- a/source/less/blocks/catalog.less
+++ b/source/less/blocks/catalog.less
@@ -107,6 +107,15 @@
   width: 100%;
   margin-top: -5px;
 
+   &:hover{
+    background-color: @button-green-hvr;
+  }
+
+  &:active{
+    background-color: @button-green-hvr;
+    color: rgba(255, 255, 255, 0.4);
+  }
+
   @media (min-width: @tablet-width) {
     margin-top: 35px;
   }
@@ -121,6 +130,14 @@
   color: black;
   background-color: #f2f2f2;
 
+   &:hover{
+    background-color: #ebebeb;
+  }
+
+  &:active{
+    background-color: #ebebeb;
+    color: rgba(0, 0, 0, 0.4);
+  }
   @media (min-width: @tablet-width) {
     margin-top: 85px;
   }
