--- a/source/less/blocks/additional-goods.less
+++ b/source/less/blocks/additional-goods.less
@@ -16,6 +16,28 @@
 
   }
 }
+.additional-goods::before {
+  position:absolute;
+  content: "";
+  z-index: -1;
+  width: 100vw;
+  left: 50%;
+  transform: translateX(-50%);
+  height: 3px;
+  background-color: @button-green;
+  top: 41px;
+
+  @media (min-width: @tablet-width) {
+    top: 35px;
+  }
+
+  @media (min-width: @desktop-width) {
+    top: 40px;
+    transform: translateX(-52%);
+  }
+}
+
+
 .additional-goods__item h3{
   .mp;
   padding-bottom: 12px;
@@ -63,6 +85,15 @@
   margin-top: 15px;
   margin-bottom: 16px;
 
+   &:hover{
+    background-color: @button-green-hvr;
+  }
+
+  &:active{
+    background-color: @button-green-hvr;
+    color: rgba(255, 255, 255, 0.4);
+  }
+
   @media (min-width: @tablet-width) {
     width: 100%;
     margin: 0;
@@ -79,50 +110,15 @@
   width: 248px;
   .mp;
   padding-top: 27px;
+  padding-left: 20px;
   padding-bottom: 34px;
-  margin-left: -2px;
+  margin-left: -22px;
   .regular;
   color: black;
   text-decoration: none;
   font-size: 24px;
   line-height: 24px;
   background-color: white;
-
-  &::before{
-    position: absolute;
-    content: "";
-    z-index: -1;
-    width: 100%;
-    left: -100%;
-    height: 3px;
-    background-color: @button-green;
-    top: 41px;
-
-    @media (min-width: @tablet-width) {
-      top: 35px;
-    }
-
-    @media (min-width: @desktop-width) {
-      top: 40px;
-    }
-  }
-  &::after{
-    position: absolute;
-    content: "";
-    z-index: -1;
-    width: 100%;
-    height: 3px;
-    background-color: @button-green;
-    top: 41px;
-
-    @media (min-width: @tablet-width) {
-      top: 35px;
-    }
-
-    @media (min-width: @desktop-width) {
-      top: 40px;
-    }
-  }
 
   @media (min-width: @tablet-width) {
     .mp;
