--- a/source/less/blocks/page-catalog.less
+++ b/source/less/blocks/page-catalog.less
@@ -10,6 +10,7 @@
   @media (min-width: @desktop-width) {
     width: 1440px;
     padding: 0 110px;
+    box-sizing: border-box;
   }
 }
 .page-catalog__wrapper {
@@ -23,7 +24,6 @@
 
   @media (min-width: @desktop-width) {
     width: 1220px;
-    margin: 0 auto;
   }
 }
 .page-catalog__caption {
