--- a/source/less/blocks/page-header.less
+++ b/source/less/blocks/page-header.less
@@ -68,10 +68,28 @@
   width: 101px;
   height: 18px;
 
+   &:hover{
+    opacity: 0.6;
+  }
+
+  &:active{
+    opacity: 0.4;
+  }
+
   @media (min-width: @tablet-width) {
     display: none;
   }
 }
+.page-header__logo-adaptive {
+  &:hover{
+    opacity: 0.6;
+  }
+
+  &:active{
+    opacity: 0.4;
+  }
+}
+
 .page-header__icon {
   margin-top: -5px;
 
