--- a/source/less/blocks/promo.less
+++ b/source/less/blocks/promo.less
@@ -163,6 +163,15 @@
   margin-top: 301px;
   margin-left: 20px;
 
+  &:hover{
+    background-color: @button-green-hvr;
+  }
+
+  &:active{
+    background-color: @button-green-hvr;
+    color: rgba(255, 255, 255, 0.4);
+  }
+
   @media (min-width: @tablet-width) {
     width: 245px;
     line-height: 52px;
