--- a/source/less/blocks/selection.less
+++ b/source/less/blocks/selection.less
@@ -42,13 +42,15 @@
 .selection__comments {
   position: relative;
   &::before {
-  position:absolute;
-  content: "";
-  z-index: -1;
-  width: 100%;
-  height: 3px;
-  background-color: @button-green;
-  top: 34px;
+    position:absolute;
+    content: "";
+    z-index: -1;
+    width: 100vw;
+    left: 50%;
+    transform: translate(-50%);
+    height: 3px;
+    background-color: @button-green;
+    top: 34px;
   }
 
   @media (min-width: @tablet-width) {
@@ -59,7 +61,9 @@
       position:absolute;
       content: "";
       z-index: -1;
-      width: 100%;
+      width: 100vw;
+      left: 50%;
+      transform: translate(-50%);
       height: 3px;
       background-color: @button-green;
       top: 74px;
@@ -70,7 +74,9 @@
         position:absolute;
         content: "";
         z-index: -1;
-        width: 100%;
+        width: 100vw;
+        left: 50%;
+        transform: translate(-50%);
         height: 3px;
         background-color: @button-green;
         top: 79px;
@@ -78,11 +84,11 @@
     }
   }
 }
+
 .selection__caption {
   position: relative;
-  width: 100%;
+  width: 120px;
   padding: 0 20px;
-  box-sizing: border-box;
   .regular;
   color: black;
   font-size: 24px;
@@ -99,9 +105,13 @@
 
   @media (min-width: @desktop-width) {
     .mp;
+    padding: 0 40px;
     padding-top: 58px;
     width: 218px;
     padding-bottom: 30px;
+    box-sizing: border-box;
+    width: 260px;
+    margin-left: -40px;
   }
 }
 
@@ -147,6 +157,15 @@
   color: white;
   font-size: 16px;
   line-height: 40px;
+
+     &:hover{
+    background-color: @button-green-hvr;
+  }
+
+  &:active{
+    background-color: @button-green-hvr;
+    color: rgba(255, 255, 255, 0.4);
+  }
 
   @media (min-width: @tablet-width) {
     padding: 0;
