всё кроме автоматизации

--- a/source/less/blocks/developers.less
+++ b/source/less/blocks/developers.less
@@ -23,6 +23,10 @@
   font-size: 16px;
   line-height: 16px;
   margin-right: -2px;
+
+  &:active {
+    opacity: 0.4;
+  }
 }
 
 .developers__item--logo {
@@ -30,4 +34,12 @@
   width: 27px;
   height: 34px;
   margin-top:-8px;
+
+  &:hover {
+    background-image: url("../img/logo-htmlacademy-green.svg");
+  }
+  &:active {
+    background-image: url("../img/logo-htmlacademy-green.svg");
+    opacity: 0.5;
+  }
 }
