--- a/source/less/blocks/example.less
+++ b/source/less/blocks/example.less
@@ -416,7 +416,7 @@
       left: 13px;
     }
     &:active {
-      &:after {
+      &::after {
         position: absolute;
         content: "";
         width: 34px;
