--- a/source/less/blocks/form-cat-info.less
+++ b/source/less/blocks/form-cat-info.less
@@ -26,7 +26,7 @@
     margin: 0;
   }
 }
-.form-cat-info__item input {
+.form-cat-info__input {
   width: 100%;
   .regular;
   .uppercase;
@@ -37,6 +37,16 @@
   padding-left: 13px;
   border: 1px solid #e6e6e6;
   color: #444444;
+
+  &:hover {
+   border: 1px solid #cdcdcd;
+  }
+
+  &:active {
+    border: 1px solid black;
+    outline: 1px solid black;
+  }
+
 
   @media (min-width: @tablet-width) {
     line-height: 52px;
