--- a/source/less/blocks/page-footer.less
+++ b/source/less/blocks/page-footer.less
@@ -69,6 +69,13 @@
   width: 128px;
   padding-top: 40px;
   padding-bottom: 30px;
+  &:hover {
+    opacity: 0.6;
+  }
+
+  &:active {
+    opacity: 0.4;
+  }
 
   @media (min-width: @tablet-width) {
     .mp;
