--- a/source/less/blocks/extra.less
+++ b/source/less/blocks/extra.less
@@ -48,14 +48,45 @@
   display: block;
   padding-left: 47px;
   line-height: 43px;
+
+  &:active{
+    opacity: 0.5;
+  }
+  &:hover {
+    &::before {
+      position: absolute;
+      content: "";
+      width: 28px;
+      height: 28px;
+      border: 1px solid #bababa;
+      top: 8px;
+      left: 1px;
+
+      @media (min-width: @tablet-width) {
+          width: 38px;
+          height: 38px;
+          border: 1px solid #bababa;
+          top: 17px;
+          left: 41px;
+      }
+
+      @media (min-width: @desktop-width) {
+        width: 38px;
+        height: 38px;
+        border: 1px solid #bababa;
+        top: 17px;
+        left: 0;
+      }
+    }
+  }
   &::before {
     position: absolute;
     content: "";
     width: 28px;
     height: 28px;
-    border: 1px solid #cfcfcf;
-    top:8px;
-    left:1px;
+    border: 1px solid #cdcdcd;
+    top: 8px;
+    left: 1px;
   }
   @media (min-width: @tablet-width) {
     width: 345px;
@@ -67,7 +98,7 @@
       content: "";
       width: 38px;
       height: 38px;
-      border: 1px solid #cfcfcf;
+      border: 1px solid #cdcdcd;
       top: 17px;
       left: 41px;
     }
@@ -81,7 +112,7 @@
       content: "";
       width: 38px;
       height: 38px;
-      border: 1px solid #cfcfcf;
+      border: 1px solid #cdcdcd;
       top: 17px;
       left: 0;
     }
