--- a/source/less/blocks/form-targets.less
+++ b/source/less/blocks/form-targets.less
@@ -40,6 +40,9 @@
   padding-left: 45px;
   position: relative;
 
+  &:active {
+    opacity: 0.5;
+  }
   @media (min-width: @tablet-width) {
     width: 668px;
     line-height:52px;
@@ -57,7 +60,8 @@
   height: 28px;
   border-radius: 40px;
   background-color: white;
-  box-shadow: 0 0 1px black;
+  box-sizing: border-box;
+  border: 1px solid #d1d1d1;
   top: 6px;
   left: 1px;
 
@@ -66,6 +70,27 @@
     height: 39px;
     top: 7px;
     left: 27px;
+  }
+}
+.form-targets__item:hover {
+  &::before {
+    position: absolute;
+    content: "";
+    width: 28px;
+    height: 28px;
+    border-radius: 40px;
+    background-color: white;
+    box-sizing: border-box;
+    border: 1px solid #bcbcbc;
+    top: 6px;
+    left: 1px;
+
+    @media (min-width: @tablet-width) {
+      width: 39px;
+      height: 39px;
+      top: 7px;
+      left: 27px;
+    }
   }
 }
 #toggle1:checked ~ .form-targets__item--1 ,
