--- a/source/less/blocks/main-nav.less
+++ b/source/less/blocks/main-nav.less
@@ -4,7 +4,8 @@
 .main-nav__list {
   display: block;
   list-style: none;
-
+  padding-left: 0;
+  margin: 0;
   @media (min-width: @tablet-width) {
     min-width: 440px;
     display: flex;
@@ -23,6 +24,18 @@
   color: black;
   font-size: 20px;
   line-height: 20px;
+  width: 320px;
+  display: block;
+  text-align: center;
+  line-height: 65px;
+  border-top: 1px solid #e6e6e6;
+
+  &:hover {
+    color: rgba(0, 0, 0, 0.6);
+  }
+  &:active {
+    color: rgba(0, 0, 0, 0.4);
+  }
 
   @media (min-width: @tablet-width) {
     .regular;
@@ -31,19 +44,22 @@
     color: black;
     font-size: 18px;
     line-height: 39px;
+    width: auto;
+    border-top: none;
   }
 
   @media (min-width: @desktop-width) {
     color: white;
     font-size: 20px;
     line-height: 39px;
+    &:hover {
+      color: rgba(255, 255, 255, 0.6);
+    }
+    &:active {
+      color: rgba(255, 255, 255, 0.4);
+    }
   }
-  &:hover {
-    color: rgba(255, 255, 255, 0.6);
-  }
-  &:active {
-    color: rgba(255, 255, 255, 0.4);
-  }
+
 }
 
 .main-nav__item--black a {
