--- a/source/less/blocks/selection.less
+++ b/source/less/blocks/selection.less
@@ -211,3 +211,11 @@
     margin-left: 58px;
   }
 }
+
+.selection__red-border {
+  border: 1px solid red;
+  outline: 1px solid red;
+  &:hover {
+    border: 1px solid red;
+  }
+}
