--- a/source/less/blocks/social.less
+++ b/source/less/blocks/social.less
@@ -22,33 +22,56 @@
 }
 
 .social__link--vkontakte {
-  background-image: url("../img/m-vk.png");
+  background-image: url("../img/icon-vk.svg");
+  background-size: 22px 12px;
   background-repeat: no-repeat;
-  background-position: 11px 26px;
+  background-position: center;
+
+  &:hover {
+    background-image: url("../img/icon-vk-green.svg");
+  }
+  &:active {
+    background-image: url("../img/icon-vk-green.svg");
+    opacity: 0.5;
+  }
 
   @media(min-width: @tablet-width) {
-    background-image: url("../img/td-vk.png");
-    background-position: center;
+    background-size: auto;
   }
 }
 
 .social__link--instagram {
-  background-image: url("../img/m-insta.png");
+  background-image: url("../img/icon-insta.svg");
+  background-size: 16px;
   background-repeat: no-repeat;
   background-position: center;
 
+  &:hover {
+    background-image: url("../img/icon-insta-green.svg");
+  }
+  &:active {
+    background-image: url("../img/icon-insta-green.svg");
+    opacity: 0.5;
+  }
   @media(min-width: @tablet-width) {
-    background-image: url("../img/td-insta.png");
+    background-size: auto;
   }
 }
 
 .social__link--facebook {
-  background-image: url("../img/m-fb.png");
+  background-image: url("../img/icon-fb.svg");
+  background-size: 10px 19px;
   background-repeat: no-repeat;
   background-position: center;
-
+  &:hover {
+    background-image: url("../img/icon-fb-green.svg");
+  }
+  &:active {
+    background-image: url("../img/icon-fb-green.svg");
+    opacity: 0.5;
+  }
   @media(min-width: @tablet-width) {
-    background-image: url("../img/td-fb.png");
+    background-size: auto;
   }
 }
 
