--- a/source/less/blocks/promo.less
+++ b/source/less/blocks/promo.less
@@ -98,11 +98,10 @@
   color: white;
   font-size: 36px;
   line-height: 36px;
-  width: 249px;
+  width: 260px;
   .ma;
-  text-indent: 10px;
   padding-top: 28px;
-
+  text-align: center;
   @media (min-width: @tablet-width) {
     font-size: 60px;
     line-height: 60px;
